--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -24,10 +24,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_rectangle_base"
+        android:orientation="vertical"
         android:paddingStart="@dimen/medium_padding"
         android:paddingEnd="@dimen/medium_padding"
-        app:layout_constraintTop_toBottomOf="@+id/settings_header"
-        android:orientation="vertical" >
+        app:layout_constraintTop_toBottomOf="@+id/settings_header">
 
 
         <TextView
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:background="@color/textColor"
-            app:layout_constraintTop_toBottomOf="@+id/filter_header"/>
+            app:layout_constraintTop_toBottomOf="@+id/filter_header" />
 
         <LinearLayout
             android:id="@+id/mcap_container"
@@ -77,9 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="40"
                 android:contentDescription="@string/minimum_market_cap"
-                android:stepSize="1"
-                android:valueFrom="0"
-                android:valueTo="6" />
+                android:stepSize="1" />
 
             <TextView
                 android:id="@+id/mcap_text"
@@ -119,9 +117,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="40"
                 android:contentDescription="@string/minimum_daily_volume"
-                android:stepSize="1"
-                android:valueFrom="0"
-                android:valueTo="6" />
+                android:stepSize="1" />
 
             <TextView
                 android:id="@+id/vol_text"
@@ -138,11 +134,13 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
-        android:id="@+id/num_gainers_container"
+        android:id="@+id/num_top_coins_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:paddingTop="@dimen/medium_padding"
+        android:paddingBottom="@dimen/medium_padding"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -163,9 +161,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="40"
             android:contentDescription="@string/minimum_daily_volume"
-            android:stepSize="1"
-            android:valueFrom="3"
-            android:valueTo="20" />
+            android:stepSize="1" />
 
         <TextView
             android:id="@+id/num_top_coins_text"
@@ -178,5 +174,98 @@
             tools:text="Number" />
 
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/favorite_change_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_rectangle_base"
+        android:orientation="vertical"
+        android:paddingStart="@dimen/medium_padding"
+        android:paddingEnd="@dimen/medium_padding"
+        android:paddingTop="@dimen/small_padding"
+        android:paddingBottom="@dimen/small_padding"
+        app:layout_constraintTop_toBottomOf="@+id/num_top_coins_container">
+
+
+        <TextView
+            android:id="@+id/favorite_change_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:paddingTop="@dimen/medium_padding"
+            android:paddingBottom="@dimen/small_padding"
+            android:text="@string/favorites_notification"
+            android:textSize="@dimen/medium_text"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/textColor"
+            app:layout_constraintTop_toBottomOf="@+id/favorite_change_header" />
+
+        <LinearLayout
+            android:id="@+id/favorite_change_checkbox_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/medium_padding"
+            android:paddingBottom="@dimen/medium_padding"
+            app:layout_constraintTop_toBottomOf="@+id/favorite_change_header">
+
+            <CheckBox
+                android:id="@+id/favorite_change_checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/favorite_change_text" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/favorite_change_value_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/medium_padding"
+            android:layout_marginEnd="@dimen/medium_padding"
+            android:gravity="center"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/favorite_change_checkbox_container">
+
+
+            <com.google.android.material.slider.Slider
+                android:id="@+id/favorite_change_value_slider"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="65"
+                android:contentDescription="@string/minimum_favorite_price_change"
+                android:stepSize="1" />
+
+            <TextView
+                android:id="@+id/favorite_change_value_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_vertical"
+                android:layout_weight="15"
+                android:paddingStart="@dimen/medium_padding"
+                android:textAlignment="viewEnd"
+                tools:text="Number" />
+
+        </LinearLayout>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
