--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 <!--    Defining night theme colors -->
+    <color name="grey1">@color/lightGrey</color>
+    <color name="grey2">@color/darkGrey</color>
+
     <color name="base1">@color/blue9</color>
     <color name="base2">@color/blue8</color>
     <color name="baseDarkTransparent">@color/blue8Transparent</color>
