--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -8,24 +8,37 @@
     android:background="@drawable/background_gradient225"
     tools:context=".views.fragments.SearchFragment">
 
-        <LinearLayout
-            android:id="@+id/rv_headers"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/base3"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@color/base2"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/rv_headers"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@color/base3"
+        android:orientation="horizontal"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        app:layout_constraintTop_toBottomOf="@+id/search_view">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/header_symbol"
@@ -33,9 +46,25 @@
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:padding="3dp"
-                    android:textAlignment="viewStart"
                     android:text="Symbol"
-                    android:textSize="14sp" />
+                    android:textAlignment="viewStart"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/header_symbol_arrow"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/icon_arrow_up"
+                    app:layout_constraintBottom_toBottomOf="@+id/header_symbol"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/header_symbol" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/header_name"
@@ -43,17 +72,37 @@
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:padding="3dp"
-                    android:textAlignment="viewStart"
                     android:text="Name"
-                    android:textSize="10sp" />
-            </LinearLayout>
+                    android:textAlignment="viewStart"
+                    android:textSize="10sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/header_name_arrow"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/icon_arrow_up"
+                    app:layout_constraintBottom_toBottomOf="@+id/header_name"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/header_name" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:id="@+id/header_price_container"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="end"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                app:layout_constraintEnd_toStartOf="@+id/header_price_arrow"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/header_price"
@@ -61,9 +110,9 @@
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:padding="3dp"
-                    android:textAlignment="viewEnd"
                     android:text="Price"
-                    android:textSize="14sp" />
+                    android:textAlignment="viewEnd"
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/header_change"
@@ -71,17 +120,35 @@
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:padding="3dp"
-                    android:textAlignment="viewEnd"
                     android:text="%24hr"
+                    android:textAlignment="viewEnd"
                     android:textSize="10sp" />
             </LinearLayout>
 
+            <ImageView
+                android:id="@+id/header_price_arrow"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/icon_arrow_up"
+                app:layout_constraintBottom_toBottomOf="@+id/header_price_container"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/header_price_container" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
             <LinearLayout
-                android:layout_width="0dp"
+                android:id="@+id/header_ath_container"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="end"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                app:layout_constraintEnd_toStartOf="@+id/header_ath_arrow"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/header_ath"
@@ -89,9 +156,9 @@
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:padding="3dp"
-                    android:textAlignment="viewEnd"
                     android:text="ATH"
-                    android:textSize="14sp" />
+                    android:textAlignment="viewEnd"
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/header_ath_change"
@@ -99,17 +166,32 @@
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:padding="3dp"
-                    android:textAlignment="viewEnd"
                     android:text="% down"
+                    android:textAlignment="viewEnd"
                     android:textSize="10sp" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:gravity="end">
+            <ImageView
+                android:id="@+id/header_ath_arrow"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/icon_arrow_up"
+                app:layout_constraintBottom_toBottomOf="@+id/header_ath_container"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/header_ath_container" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/header_volume"
@@ -117,9 +199,25 @@
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:padding="3dp"
-                    android:textAlignment="viewEnd"
                     android:text="Volume"
-                    android:textSize="14sp" />
+                    android:textAlignment="viewEnd"
+                    android:textSize="12sp"
+                    app:layout_constraintEnd_toStartOf="@+id/header_volume_arrow"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/header_volume_arrow"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/icon_arrow_up"
+                    app:layout_constraintBottom_toBottomOf="@+id/header_volume"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/header_volume" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/header_mcap"
@@ -127,19 +225,31 @@
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:padding="3dp"
-                    android:textAlignment="viewEnd"
                     android:text="MCap"
-                    android:textSize="10sp" />
-            </LinearLayout>
+                    android:textAlignment="viewEnd"
+                    android:textSize="10sp"
+                    app:layout_constraintEnd_toStartOf="@+id/header_mcap_arrow"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/header_mcap_arrow"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/icon_arrow_up"
+                    app:layout_constraintBottom_toBottomOf="@+id/header_mcap"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/header_mcap" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/main_recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
