--- a/app/src/main/res/layout/saved_coin_header.xml
+++ b/app/src/main/res/layout/saved_coin_header.xml
@@ -14,7 +14,7 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="40dp"
+        android:layout_width="@dimen/logo_min_width"
         android:layout_height="match_parent"
         android:contentDescription="@string/coin_logo"
         android:gravity="start|center_vertical"
