--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="colorAccent">@color/textColor</color>
+
 <!--    Defining night theme colors -->
     <color name="grey1">@color/lightGrey</color>
     <color name="grey2">@color/darkGrey</color>
