--- a/app/src/main/res/layout/alert_view_change_position.xml
+++ b/app/src/main/res/layout/alert_view_change_position.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         android:textAlignment="center"
-        android:text="Open position"
+        android:text="Change position"
         android:textSize="@dimen/big_text"
         android:textStyle="bold"
         />
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/medium_padding"
-        android:text="@string/open_position_text"
+        android:text="@string/change_position_text"
         android:textSize="@dimen/big_text"
         app:layout_constraintTop_toBottomOf="@+id/alert_header" />
 
