--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -21,7 +21,7 @@
             android:fitsSystemWindows="false">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/header"
+                android:id="@+id/alert_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/base1"
