--- a/app/src/main/res/layout/fragment_recent.xml
+++ b/app/src/main/res/layout/fragment_recent.xml
@@ -10,7 +10,7 @@
 
 
     <include
-        android:id="@+id/header"
+        android:id="@+id/alert_text"
         layout="@layout/saved_coin_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -27,7 +27,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header"
+        app:layout_constraintTop_toBottomOf="@+id/alert_text"
         tools:listitem="@layout/saved_coin_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
